17 Aug 2011 Move device unique data fields into devunique union. - P.Gorlinsky
12 Aug 2011 Fix color message and timestamp problem. Removed LOGMSG macro.
            change log_msg to logmsg. - P. Gorlinsky
12 Aug 2011 Add logmsg() support for utilities. - P. Gorlinsky
11 Aug 2011 Modify maxsize/eotmargin to accept 'K', 'M', 'G', 'T' designations 
            Correct file open on '*' unloaded filename - P. Gorlinsky
25 Jul 2011 Fix suspend/resume MAINSTOR/XPNDSTOR bugs - Fish
16 Jul 2011 Fix SCSI tape S613 abend issue - Fish
13 Jul 2011 Externalized TN3270 logo cnsllogo.h - PGorlinsky
10 Jul 2011 Relax AUTOMOUNT CCW restrictions - Fish
24 Apr 2011 Fix IEHINITT blank tape BSR bug - Fish
23 Jun 2011 Fix 0671 FBA blocks per access position (bpp) - paoloG by Fish
22 Jun 2011 Fix expanded storage suspend/resume bug - Tomas Fott by Fish
21 Jun 2011 Sub-second script pausing support - Fish
20 Jun 2011 Correct long standing nanosleep/usleep bug in MSVC build - Fish
20 Jun 2011 Proper reimplementation of asynchronous scripts handling - Fish
20 Jun 2011 OPTION_MUTEX_ERRORCHECK locking model build option/reporting - Fish
03 Jun 2011 Fix script recursion and cscript handling - Fish
02 Jun 2011 Fix command processing serialization/locking - Fish
29 May 2011 SHOWDVOL1 command/statement to show dasd VOL1 in device list - Fish
28 May 2011 Fix rare devinit bug and leak in reuse of previous arguments - Fish
23 Apr 2011 Provide initial DIAGNOSE X'F18' README and release Host Resource Access
            Facility - Harold Grovesteen
20 Apr 2011 Fix file opens to open files in non-multi-write-shared mode
            (Windows-only for now; non-Windows yet to be implemented) - Fish
17 Apr 2011 LCS CTCI-WIN v3.3 multi-write mode (faster guest downloads) - Fish
27 Feb 2011 Fix all-zero MAC bug in LCS cmd reply frame handling - Fish
22 Feb 2011 Function logmsg() renamed to log_msg(); LOGMSG define added to simply implementation
21 Feb 2011 Fix CCKD stmt 'comp=' validation bug - Fish