@@ -42,7 +42,14 @@ void close_awstape (DEVBLK *dev)
         WRMSG (HHC00201, "I", SSID_TO_LCSS(dev->ssid), dev->devnum, dev->filename, "aws");
         close(dev->fd);
     }
-    strlcpy(dev->filename, TAPE_UNLOADED, sizeof(dev->filename));
+    if ( dev->filename != NULL )
+    {
+        free(dev->filename);
+        dev->filename = NULL;
+    }
+
+    dev->filename = strdup( TAPE_UNLOADED );
+
     dev->fd=-1;
     dev->devunique.tape_dev.blockid = 0;
     dev->devunique.tape_dev.fenced = 0;
@@ -158,7 +165,12 @@ char            pathname[MAX_PATH];     /* file path in host format  */
     {
         WRMSG (HHC00205, "E", SSID_TO_LCSS(dev->ssid), dev->devnum, dev->filename, "aws", "open()", strerror(errno));
 
-        strlcpy( dev->filename, TAPE_UNLOADED, sizeof(dev->filename) );
+        if (dev->filename != NULL)
+        {
+            free(dev->filename);
+            dev->filename = NULL;
+        }
+        dev->filename = strdup( TAPE_UNLOADED );
         build_senseX(TAPE_BSENSE_TAPELOADFAIL,dev,unitstat,code);
         return -1;
     }
